Fix link to Google Fonts in index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <link href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwitnNahzb-QAxWGPEQIHZB-LQIQFnoECC8QAQ&url=https%3A%2F%2Fwww.roblox.com%2F&usg=AOvVaw31obxNSZwdX-aiiNZtVHXn&opi=89978449
+  <link href=""https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap
     " rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
